[tool.poetry]
name = "sllim"
version = "0.1.31"
description = "Fxing the openai api"
authors = ["Kaiser Pister <kaiser@pister.dev>"]
readme = "README.md"
homepage = "https://github.com/kpister/sllim"

[tool.poetry.dependencies]
python = ">= 3.9"
openai = ">= 0.28"
tiktoken = ">= 0.4.0"
pyspellchecker = ">= 0.7.2"

[tool.poetry.scripts]
check = "sllim.check:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
