[tool.poetry]
name = "sllim"
version = "0.2.0"
description = "Fixing the openai api"
authors = ["Kaiser Pister <kaiser@pister.dev>"]
readme = "README.md"
homepage = "https://github.com/kpister/sllim"

[tool.poetry.dependencies]
python = ">= 3.9"
openai = ">= 1.2.0"
tiktoken = ">= 0.5.1"
pyspellchecker = ">= 0.7.2"

[tool.poetry.scripts]
check = "sllim.check:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
